--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
   <title>GregKover</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8" />
+  <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+        rel="stylesheet" />
 </head>
-<body>
-  <app-root>Loading...</app-root>
+<body class="m-1">
+<gregkover-app>Angular placeholder</gregkover-app>
 </body>
 </html>
